# libdatachannel-java

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: gradle.yml
android/: build.gradle.kts
arch-detect/: build.gradle.kts
conventions/src/main/kotlin/: Constants.kt  tel.schich.libdatachannel.convention.common.gradle.kts
example/java/: build.gradle.kts
gradle/: libs.versions.toml
ios/: build.gradle.kts
jni/: CMakeLists.txt  build.sh  conanfile.py
jni/cmake/: verify_mimalloc_symbols.cmake
jni/src/: init.c  mimalloc_prefix_symbols.h  mimalloc_redirect.h  native_channel.c  native_peer.c  native_track.c  util.c
src/main/java/tel/schich/libdatachannel/: EventListenerContainer.java  LibDataChannel.java  PeerConnection.java  PeerConnectionListener.java  Platform.java
